--- a/JonasGradeAnalysis.ipynb
+++ b/JonasGradeAnalysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNO+TeZZNyN4VK+FUf0AoHk",
+      "authorship_tag": "ABX9TyN9eF/sP8f8CfgJpqgtRB9G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,82 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "#grade analyser \n",
+        "The following code will...\n",
+        "\n",
+        "1.   extract data from text file \n",
+        "2.   Populate an array of objects with the data from the text file\n",
+        "3.   Calculate the letter grades for each subject \n",
+        "4.   Output the data  \n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "VeYXvMLJyQ1D"
+        "id": "FRxGHhpRy9ko"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Extract the data from the text file"
+      ],
+      "metadata": {
+        "id": "ZKuRZt070C9Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "SubjectGrades = open(\"/ASsubjectgrades.txt\", \"r\")\n",
+        "Subject = SubjectGrades.readline()\n",
+        "print(Subject)\n",
+        "while Subject != \"\":\n",
+        "  Grade = SubjectGrades.readline()\n",
+        "  print(\"subject: \", Subject)\n",
+        "  print(\"Mark: \", Grade)\n",
+        "  Subject = SubjectGrades.readline()\n",
+        "\n",
+        "SubjectGrades.close()\n"
+      ],
+      "metadata": {
+        "id": "aOQzGLHv1otH",
+        "outputId": "d2252a61-71e9-40c0-86b8-6b664f7ed021",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Computer science \n",
+            "\n",
+            "subject:  Computer science \n",
+            "\n",
+            "Mark:  70\n",
+            "\n",
+            "subject:  Physics\n",
+            "\n",
+            "Mark:  60\n",
+            "\n",
+            "subject:  maths\n",
+            "\n",
+            "Mark:  70\n",
+            "\n",
+            "subject:  art\n",
+            "\n",
+            "Mark:  80\n",
+            "\n",
+            "subject:  lengua\n",
+            "\n",
+            "Mark:  100\n"
+          ]
+        }
+      ]
     }
   ]
 }
